# Starling-Agent-Dashboard

./: .gitattributes  .gitignore  CONTROL_PROTOCOL.md  README.md  pyproject.toml  run-dashboard.bat  run-dashboard.command  run-dashboard.sh
starling_dashboard/: __init__.py  __main__.py  client.py  config.py  controlplane.py  gui.py  treasury.py  ui.py  web.py
starling_dashboard/static/: index.html
tests/: test_treasury.py  test_web.py
tools/: mock_mcp.py
