[project]
name = "starling-dashboard"
version = "0.1.0"
description = "Watch your Starling trading agent live — an open example desktop dashboard for the Starling MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "trading-agent", "dashboard", "starling", "hyperliquid", "polymarket", "solana"]
dependencies = [
  "mcp>=1.0",
  "rich>=13.0",
]

[project.scripts]
starling-dashboard = "starling_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/thedopetoad/Starling-Agent-Dashboard"
"MCP server" = "https://github.com/thedopetoad/Starling-MCP"
"Wallet setup" = "https://github.com/thedopetoad/Agent-Wallet-Setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["starling_dashboard"]
