[project]
name = "starling-dashboard"
version = "0.2.0"
description = "A local web dashboard for the Starling MCP — watch and control your trading agent from your browser."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "trading-agent", "dashboard", "starling", "hyperliquid", "polymarket", "solana"]
# Zero third-party dependencies — pure Python standard library.
dependencies = []

[project.scripts]
starling-dashboard = "starling_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/thedopetoad/Starling-Agent-Dashboard"
"Starling MCP" = "https://github.com/thedopetoad/Starling-MCP"
"Wallet setup" = "https://github.com/thedopetoad/Agent-Wallet-Setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["starling_dashboard"]
# Ship the single-page app bundled inside the package.
artifacts = ["starling_dashboard/static/*"]
